--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,94 @@
-# runtime state
-data/
+################################################################################
+# SECRETS — NEVER COMMIT
+################################################################################
+
+.env
+.env.*
+!.env.example
+
 secrets/
-tmp/
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
 
-# if you ever vendor openclaw source here
+################################################################################
+# OPENCLAW RUNTIME STATE — MUST NEVER BE VERSIONED
+################################################################################
+
+data/
+data/openclaw_home/
+data/openclaw/
+data/runs/
+
+# explicit safety (redundant but intentional)
+openclaw_home/
 openclaw/
+runs/
 
-# common cruft
+################################################################################
+# DOCKER STATE
+################################################################################
+
+docker-compose.override.yml
+compose.override.yaml
+
+################################################################################
+# LOCAL BUILD / CACHE
+################################################################################
+
+tmp/
+temp/
+.cache/
 **/.cache/
-**/__pycache__/
-**/*.pyc
-node_modules/
+
 dist/
+build/
+node_modules/
+
+################################################################################
+# PYTHON
+################################################################################
+
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pytest_cache/
+*.mypy_cache/
+.venv/
+venv/
+
+################################################################################
+# OS / EDITOR
+################################################################################
+
 .DS_Store
+Thumbs.db
+*.swp
+*.swo
+
+.vscode/
+.idea/
+
+################################################################################
+# LOG FILES
+################################################################################
+
+*.log
+logs/
+
+################################################################################
+# GCP / CLOUD / SSH
+################################################################################
+
+*.json.key
+gcp-key.json
+service-account.json
+
+################################################################################
+# OPTIONAL: IGNORE LOCAL OPENCLAW SOURCE IF EVER CLONED HERE
+################################################################################
+
+openclaw-src/
