openclaw: bind gateway to LAN and allow unconfigured startup

--- a/compose/openclaw.yaml
+++ b/compose/openclaw.yaml
@@ -16,4 +16,4 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - OPENCLAW_GATEWAY_TOKEN=${OPENCLAW_GATEWAY_TOKEN}
 
-    command: ["node","openclaw.mjs","gateway","run","--port","18789","--verbose"]
+    command: ["node","openclaw.mjs","gateway","run","--bind","lan","--port","18789","--verbose","--allow-unconfigured"]
